[tool.poetry]
name = "repl_nix_Leetcodesrchengine"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.10.0"
webdriver-manager = "^3.8.6"
WTForms = "^3.0.1"
bs4 = "^0.0.1"
Flask = "^2.3.2"
Flask-WTF = "^1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
